[gd_scene load_steps=2 format=3 uid="uid://jsvmnoss0cff"]

[ext_resource type="Script" path="res://src/Extensions/Teledrawing/Teledrawing.gd" id="1_cv21r"]

[node name="Teledrawing" type="AcceptDialog"]
disable_3d = true
title = "Teledrawing"
size = Vector2i(300, 201)
script = ExtResource("1_cv21r")

[node name="NetworkOptions" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 292.0
offset_bottom = 152.0

[node name="CreateServer" type="Button" parent="NetworkOptions"]
layout_mode = 2
text = "Create server"

[node name="HSeparator" type="HSeparator" parent="NetworkOptions"]
layout_mode = 2

[node name="JoinServer" type="Button" parent="NetworkOptions"]
layout_mode = 2
text = "Join server"

[node name="IPLineEdit" type="LineEdit" parent="NetworkOptions"]
layout_mode = 2
text = "::1"
placeholder_text = "Insert server IP"

[node name="PortLineEdit" type="LineEdit" parent="NetworkOptions"]
layout_mode = 2
text = "18819"

[node name="Disconnect" type="Button" parent="NetworkOptions"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Disconnect"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="NetworkOptions/CreateServer" to="." method="_on_create_server_pressed"]
[connection signal="pressed" from="NetworkOptions/JoinServer" to="." method="_on_join_server_pressed"]
[connection signal="text_changed" from="NetworkOptions/IPLineEdit" to="." method="_on_ip_line_edit_text_changed"]
[connection signal="text_changed" from="NetworkOptions/PortLineEdit" to="." method="_on_port_line_edit_text_changed"]
[connection signal="pressed" from="NetworkOptions/Disconnect" to="." method="_on_disconnect_pressed"]
